added host configuration for render.com
